# eric-rust-chassis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  buildenv.Dockerfile  common-properties.yaml  debug.Dockerfile  ruleset2.0.yaml  settings.yaml
charts/eric-rust-chassis/: Chart.yaml  eric-product-info.yaml  values.yaml
charts/eric-rust-chassis/templates/: NOTES.txt  _aggregated-merge.tpl  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  podDisruptionBudget.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
ci/: custom_stages.yaml  helm.Jenkinsfile  local_pipeline_env.txt  post_init.Jenkinsfile
doc/: dev-manual.md
ers/: Cargo.toml
ers/src/: kafka.rs  lib.rs  types.rs
ms/: Cargo.toml
ms/res/: ves-7.2.1-batch.json  ves-7.2.1-domain_pnfRegistration.json
ms/res/schemas/: CommonEventFormat_30.2.1.json
ms/src/: http_server.rs  kafka_consumer.rs  lib.rs  main.rs  types.rs  utils.rs  ves.rs
