[package]
name = "eric-rust-library"
version = "0.1.0"
edition = "2021"

[lib]
name = "ers"
path = "src/lib.rs"

[[bin]]
name = "example_kafka"
path = "src/bin/kafka_client.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.2"
log = "0.4.20"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
